Enhance Facebook integration by adding configuration for fetching events from the past 30 days. Update lifespan function to read Facebook settings directly from environment variables, improving initialization reliability. Refactor Kafka topic names for consistency.

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ FACEBOOK_ACCESS_TOKEN=EAADMgYSJvKcBQdDYwibeZBJ9ybLh2EhGv64ODOq14MK1YCFCO7Kv5fWQp
 FACEBOOK_PAGE_IDS=137101232817215
 FACEBOOK_API_VERSION=v24.0
 FACEBOOK_POLL_INTERVAL_MINUTES=30
+FACEBOOK_FETCH_DAYS_BACK=30
 
 # Disable mock APIs to use real Facebook API
 USE_MOCK_APIS=false
